# sw-assignment-py

./: .flake8  .gitignore  .yamllint.yaml  ASSIGNMENT.md  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  install_dependencies.sh  pyproject.toml  uninstall_dependencies.sh
sw_assignment/: __init__.py  __main__.py  app.py  config.py  constants.py  printer.py  storage.py
tests/: conftest.py  helpers.py  test_app.py  test_config.py  test_printer.py  test_storage.py
tmp/: mc_done
